[package]
license = "MIT"
authors = ["Daniel Collin <daniel@collin.com>"]
name = "bgfx-sys"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[badges]
maintenance = {status = "actively-developed"}

[dev-dependencies]
minifb = "0.19.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
