[package]
license = "BSD-2-Clause"
authors = ["Daniel Collin <daniel@collin.com>"]
categories = ["rendering::graphics-api"]
name = "bgfx-sys"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[badges]
maintenance = {status = "actively-developed"}

[dev-dependencies]
glfw = "0.41"
raw-window-handle = "0.3"
glam = "0.15"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]

[features]
bgfx-debug = []
