[package]
license = "BSD-2-Clause"
authors = ["Daniel Collin <daniel@collin.com>"]
categories = ["rendering::graphics-api"]
description = "low-level FFI bindings for bgfx"
repository = "https://github.com/emoon/bgfx-sys"
documentation = "https://docs.rs/bgfx-sys/0.5/bgfx-sys"
name = "bgfx-sys"
version = "0.9.0"
edition = "2018"
build = "build.rs"

exclude = [
    "bgfx/bindings",
    "bgfx/examples",
    "bgfx/3rdparty/cgltf",
    "bgfx/3rdparty/dear-imgui",
    "bgfx/3rdparty/glslang",
    "bgfx/3rdparty/fcpp",
    "bgfx/3rdparty/glsl-optimizer",
    "bgfx/3rdparty/spirv-cross",
    "bgfx/3rdparty/spirv-headers",
    "bgfx/3rdparty/spirv-tools",
    "bgfx/tools",
]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
glfw = "0.41"
raw-window-handle = "0.3"
glam = "0.15"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]

[features]
bgfx-debug = []
bgfx-single-threaded = []
